.sbtserver/previous.log
New log file opened at Fri Feb 05 00:55:32 BRST 2016 by 13090@ledzeppelin
jvm 13090@ledzeppelin
jvm vmName=Java HotSpot(TM) 64-Bit Server VM vmVendor=Oracle Corporation vmVersion=25.72-b15
jvm specName=Java Virtual Machine Specification specVendor=Oracle Corporation specVersion=1.8
jvm arguments: [-Xms256m, -Xmx1024m, -XX:MetaspaceSize=64m, -XX:MaxMetaspaceSize=256m]
Starting event engine
Starting sbt command engine
Waiting for sbt command engine
Command engine arguments=List()
Command engine baseDirectory=/home/luiz/projetos/99taxis/taxi_api_play_java
Command engine initial remaining commands List(--initialize, onFailure load-failed, boot, server-send-ready-for-request, server-handle-next-server-request)
> --initialize
> initialize
> onFailure load-failed
> boot
> reload
[Loading] Scanning directory /home/luiz/projetos/99taxis/taxi_api_play_java/project
/home/luiz/projetos/99taxis/taxi_api_play_java/project/plugins.sbt:22: error: not found: value PlayJava
lazy val myProject = (project in file(".")).enablePlugins(PlayJava, PlayEbean)
                                                          ^
Type error in expression
sbt.compiler.EvalException: Type error in expression
Use 'last' for the full log.
> load-failed
Failed to load project.
> server-wait-for-reboot
Done executing sbt server engine, result Right(Exit(0))
Closing listening server socket
Waiting for socket thread
Waiting for request processor thread
Waiting for command engine result
Returning control to sbt launcher with result Exit(0)
Closing the 13090@ledzeppelin logs at Fri Feb 05 00:55:56 BRST 2016, goodbye.
